<resources>
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency dialler</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="labelCF">Call forwarding</string>
    <string name="sum_voicemail_choose_provider">Select voicemail service</string>
    <string name="fdn">Fixed Dialling Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialling Numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto retry</string>
    <string name="auto_retry_mode_summary">Enable Auto retry mode</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF tones</string>
    <string name="dtmf_tones_summary">Set length of DTMF tones</string>
    <string name="voicemail_settings">Voicemail settings</string>
    <string name="voicemail_provider">Voicemail service</string>
    <string name="other_settings">Other call settings</string>
    <string name="respond_via_sms_setting_title">Quick responses</string>
    <string name="respond_via_sms_setting_summary" />
    <string name="voicemail_notification_vibrate_when_title">Vibrate</string>
    <string name="voicemail_notification_vibarte_when_dialog_title">Vibrate</string>
    <string name="voicemail_notification_ringtone_title">Ringtone</string>
    <string name="voicemail_notification_vibrate_when_default">never</string>
    <string name="callsettings_ringtones_keytones_title">Ringtones and keypad tones</string>
    <string name="menu_videocallImage">Video call image</string>
    <string name="menu_useCallFailOption">Use call fail options</string>
    <string name="menu_emotionalEyeContact">Eye contact</string>
    <string name="category_videoCallSettings">Video call settings</string>
    <string name="summary_videocallImage">Set default Hide me image</string>
    <string name="menu_ownVideoInReceivedCall">Own video in received call</string>
    <string name="summary_ownVideoInReceivedCall">Show live image to caller when user accepts video call</string>
    <string name="summary_useCallFailOption">Use alternative methods to reattempt failed call</string>
    <string name="summary_emotionalEyeContact">Modified my eye like looking at screen during video call</string>
    <string name="message">Message</string>
    <string name="callsettings_call_rejection_title">Call rejection</string>
    <string name="callsettings_call_rejection_summary">Manage auto reject mode</string>
    <string name="callsettings_reject_messages_title">Set reject messages</string>
    <string name="callsettings_reject_messages_summary">Edit reject messages</string>
    <string name="callsettings_call_alert_title">Call alert</string>
    <string name="callsettings_call_alert_summary">Set call alerts</string>
    <string name="callsettings_call_answer_end_title">Answering/ending calls</string>
    <string name="callsettings_call_answer_end_summary">Manage call answering/ending settings</string>
    <string name="callsettings_PowerkeyEndsCalls_title">The power key ends calls</string>
    <string name="callsettings_PowerkeyEndsCalls_summary">Press the power key to end calls when screen is on. This will not turn off screen</string>
    <string name="callsettings_accessory_title">Call accessories</string>
    <string name="callsettings_accessory_summary">Set accessory options for calls</string>
    <string name="callsettings_areacode_title">Auto area code</string>
    <string name="callsettings_areacode_summary_off">Automatically add area code to number display panel</string>
    <string name="menu_activateProximitySensor">Turn off screen during calls</string>
    <string name="summary_activateProximitySensor">Turn on proximity sensor during calls</string>
    <string name="menu_extraVol">Extra volume on calls</string>
    <string name="summary_extraVol">Extra volume button is shown on screen during calls</string>
    <string name="menu_extraRinger">Increase volume in pocket</string>
    <string name="summary_extraRinger">Ringtone volume increases when the device is in a pocket or bag</string>
    <string name="callsettings_autoredial_title">Auto redial</string>
    <string name="callsettings_autoredial_summary">Enable auto redial if call is unable to connect or cut off</string>
    <string name="callsettings_subaddress_title">Subaddress</string>
    <string name="callsettings_subaddress_summary">Enable subaddress using asterisk character in number</string>
    <string name="callsettings_call_barring">Call barring</string>
    <string name="toggle_internationalcall_title">International call lock</string>
    <string name="internationalcall_on">International call lock enabled</string>
    <string name="internationalcall_off">International call lock disabled</string>
    <string name="manage_conference_call">Manage conference call</string>
    <string name="contacts">Contacts</string>
    <string name="memo">Memo</string>
    <string name="noise_reduction_off">Noise reduction off</string>
    <string name="noise_reduction_on">Noise reduction on</string>
    <string name="onehand_mode_on">One-handed operation on</string>
    <string name="call_sound_eq">My call sound</string>
    <string name="send_file_via_chat_on">Share file via Chat on</string>
    <string name="send_file_via_filetransfer">Share file via File transfer</string>
    <string name="sim_services">SIM services</string>
    <string name="transfer">Transfer</string>
    <string name="category_voiceCallEqSettings">My call sound</string>
    <string name="popup_start_record">Record Voice</string>
    <string name="popup_stop_record">Stop recording</string>
    <string name="out_img">Outgoing image</string>
    <string name="hide">Hide me</string>
    <string name="keypad">Keypad</string>
    <string name="switch_hd">Switch to headset</string>
    <string name="switch_ph">Switch to phone</string>
    <string name="spkoff">Speaker off</string>
    <string name="spkon">Speaker on</string>
    <string name="show">Show me</string>
    <string name="eye_contact_on">Enable eye contact</string>
    <string name="eye_contact_off">Disable eye contact</string>
    <string name="emotional_animation">Animated emotions</string>
    <string name="theme_view">Theme view</string>
    <string name="cartoon_view_on">Enable cartoon view</string>
    <string name="cartoon_view_off">Disable cartoon view</string>
    <string name="ddtm_mode_option_title">DDTM</string>
    <string name="ddtm_summary">Send voice calls to voicemail during active data connection</string>
    <string name="zz_country_code_name">International dialing</string>
    <string name="zz_country_name_toggle_summary">Replaces + with international dialing code except +1</string>
    <string name="zz_country_code_dialing_title">US dialing</string>
    <string name="zz_country_code_summary">Enter international dialing code</string>
    <string name="ip_call_list">IP Call List</string>
    <string name="manage_ip_call_list">Manage IP Call List</string>
    <string name="ip_call_settings">IP Call setting</string>
    <string name="callsettings_number_region">Phone number locator</string>
    <string name="callsettings_pnl_sub_text">Configure phone number locator</string>
    <string name="screen_brightness">Screen brightness</string>
    <string name="close_camera">Close camera</string>
    <string name="open_camera">Open camera</string>
    <string name="videocall_list_6">Accept automatically</string>
    <string name="automatic_accept_enabled">Accept call automatically If accept by voice call is selected.</string>
    <string name="automatic_accept_disabled">Accept call automatically If accept by voice call is selected.</string>
    <string name="videocall_list_3_option_2">Manual</string>
    <string name="vvm_settings">Voicemail settings</string>
    <string name="vvm_settings_summary">Set options for voicemail</string>
    <string name="toggle_videocall_title">Auto divert to voice call</string>
    <string name="videocall_summary">Video calls automatically switch to voice calls when dialed to numbers that do not support video calls</string>
    <string name="menu_captureImageViewer">Video call contents box</string>
    <string name="summary_captureImageViewer">Save captured images</string>
    <string name="videocallmessage_title">Video call quality info</string>
    <string name="videocallmessage_summary">Select to show pop-ups about video call quality</string>
    <string name="toggle_videocall_speaker">Speaker</string>
    <string name="videocall_speaker_on">Speaker on during video calls</string>
    <string name="videocall_speaker_off">Speaker off during video calls</string>
    <string name="toggle_videocall_indicator">Display video call icon</string>
    <string name="videocall_indicator_summary">Display an icon on indicator when video calls are supported</string>
    <string name="callsettings_noise_reduction_title">Noise reduction</string>
    <string name="callsettings_noise_reduction_summary">Suppresses background noise from your side during calls</string>
    <string name="toggle_videocall_mode_title">Remote screen control mode</string>
    <string name="videocall_mode_on">Remote screen control mode enabled. Screen will be controlled remotely when connected to network provider</string>
    <string name="videocall_mode_off">Remote screen control mode disabled. Screen will not be controlled remotely when connected to network provider</string>
    <string name="kt_additional_service">Supplementary service</string>
    <string name="onscreenBluetoothTextOn">Switch to phone</string>
    <string name="onscreenBluetoothTextOff">Switch to headset</string>
    <string name="assisted_dialing_summary">Set up easy international call dialing while roaming</string>
    <string name="assisted_dialing">Assisted Dialing</string>
    <string name="assisted_dialing_reference_country_list">Current Country</string>
    <string name="menu_call_protection">Voice call protection</string>
    <string name="summary_call_protection_on">Voice call protection enabled</string>
    <string name="summary_call_protection_off">Voice call protection disabled</string>
    <string name="loading">Loading...</string>
    <string name="voicecall_type_title">Voice call outgoing settings</string>
    <string name="voicecall_type_summary">Select the prefered Voice call type</string>
    <string name="menu_volteNoti">Display the status of HD Voice</string>
    <string name="summary_volteNoti">Show the HD icon on the indicatorbar when HD voice call is available</string>
    <string name="remind_alarm_tone">Reminder tone</string>
    <string name="callsettings_int_call_svc_title">International call prefix</string>
    <string name="callsettings_int_call_svc_auto">Automatic</string>
</resources>