<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/hide" android:title="@string/hide" />
    <item android:id="@id/show" android:title="@string/show" />
    <item android:id="@id/close_camera" android:title="@string/close_camera" />
    <item android:id="@id/open_camera" android:title="@string/open_camera" />
    <item android:id="@id/out_img" android:title="@string/out_img" />
    <item android:id="@id/keypad" android:title="@string/keypad" />
    <item android:id="@id/spkon" android:title="@string/spkon" />
    <item android:id="@id/spkoff" android:title="@string/spkoff" />
    <item android:id="@id/switch_hd" android:title="@string/switch_hd" />
    <item android:id="@id/switch_ph" android:title="@string/switch_ph" />
    <item android:id="@id/noise_reduction_on" android:title="@string/noise_reduction_on" />
    <item android:id="@id/noise_reduction_off" android:title="@string/noise_reduction_off" />
    <item android:id="@id/eye_contact_on" android:title="@string/eye_contact_on" />
    <item android:id="@id/eye_contact_off" android:title="@string/eye_contact_off" />
    <item android:id="@id/emotional_animation" android:title="@string/emotional_animation" />
    <item android:id="@id/theme_view" android:title="@string/theme_view" />
    <item android:id="@id/cartoon_view_on" android:title="@string/cartoon_view_on" />
    <item android:id="@id/cartoon_view_off" android:title="@string/cartoon_view_off" />
    <item android:id="@id/screen_brightness" android:title="@string/screen_brightness" />
</menu>