<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/mergs_calls" android:title="@string/onscreenMergeCallsText" />
    <item android:id="@id/manage_conference_call" android:title="@string/manage_conference_call" />
    <item android:id="@id/add_call" android:title="@string/onscreenAddCallText" />
    <item android:id="@id/contacts" android:title="@string/contacts" />
    <item android:id="@id/message" android:title="@string/message" />
    <item android:id="@id/memo" android:title="@string/memo" />
    <item android:id="@id/start_record" android:title="@string/popup_start_record" />
    <item android:id="@id/stop_record" android:title="@string/popup_stop_record" />
    <item android:id="@id/noise_reduction_off" android:title="@string/noise_reduction_off" />
    <item android:id="@id/noise_reduction_on" android:title="@string/noise_reduction_on" />
    <item android:id="@id/call_sound_eq" android:title="@string/call_sound_eq" />
    <item android:id="@id/send_file_via_chat_on" android:title="@string/send_file_via_chat_on" />
    <item android:id="@id/send_file_via_filetransfer" android:title="@string/send_file_via_filetransfer" />
    <item android:id="@id/sim_services" android:title="@string/sim_services" />
    <item android:id="@id/sim_services2" android:title="@string/sim_services" />
    <item android:id="@id/call_transfer" android:title="@string/transfer" />
    <item android:id="@id/bt_headset_on" android:title="@string/onscreenBluetoothTextOn" />
    <item android:id="@id/bt_headset_off" android:title="@string/onscreenBluetoothTextOff" />
    <item android:id="@id/menu_onehand" android:title="@string/onehand_mode_on" />
</menu>