<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/call_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceScreen android:title="@string/callsettings_call_rejection_title" android:key="button_call_rejection_key" android:summary="@string/callsettings_call_rejection_summary" android:fragment="com.android.phone.callsettings.AutoRejectPreference" />
    <PreferenceScreen android:persistent="false" android:title="@string/fdn" android:key="button_fdn_key" android:summary="@string/sum_fdn">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.FdnSetting" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/respond_via_sms_setting_title" android:key="button_respond_via_sms_key" android:summary="@string/respond_via_sms_setting_summary">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.RespondViaSmsManager$Settings" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/callsettings_reject_messages_title" android:key="reject_message_preference" android:summary="@string/callsettings_reject_messages_summary" android:fragment="com.android.phone.callsettings.RejectCallWithMsg" />
    <PreferenceScreen android:title="@string/callsettings_ringtones_keytones_title" android:key="button_ringtone_keytone_key" android:fragment="com.android.phone.callsettings.RingtoneKeytoneSettings" />
    <com.android.phone.RemindRingtonePreference android:persistent="false" android:title="@string/remind_alarm_tone" android:key="ringtone" android:widgetLayout="@layout/round_more_icon" android:dialogTitle="@string/remind_alarm_tone" android:ringtoneType="ringtone|alarm" />
    <CheckBoxPreference android:title="@string/toggle_internationalcall_title" android:key="toggle_internationalcall" android:summaryOn="@string/internationalcall_on" android:summaryOff="@string/internationalcall_off" />
    <com.android.phone.callsettings.IntCallServicePreference android:title="@string/callsettings_int_call_svc_title" android:key="intcallservice_preference" android:summary="@string/callsettings_int_call_svc_auto" android:widgetLayout="@layout/round_more_icon" android:dialogTitle="@string/callsettings_int_call_svc_title" />
    <PreferenceScreen android:title="@string/callsettings_call_alert_title" android:key="call_alert_preference" android:summary="@string/callsettings_call_alert_summary" android:fragment="com.android.phone.callsettings.CallAlert" />
    <PreferenceScreen android:title="@string/callsettings_call_answer_end_title" android:key="call_answer_preference" android:summary="@string/callsettings_call_answer_end_summary">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.callsettings.AnsweringCall" />
    </PreferenceScreen>
    <com.android.phone.callsettings.PowerKeyEndPreference android:title="@string/callsettings_PowerkeyEndsCalls_title" android:key="powerkey_end_preference" android:summary="@string/callsettings_PowerkeyEndsCalls_summary" />
    <CheckBoxPreference android:title="@string/menu_activateProximitySensor" android:key="proximity_sensor_preference" android:summary="@string/summary_activateProximitySensor" />
    <ListPreference android:entries="@array/voicecall_type_entries" android:title="@string/voicecall_type_title" android:key="voicecall_type" android:summary="@string/voicecall_type_summary" android:entryValues="@array/voicecall_type_values" />
    <CheckBoxPreference android:title="@string/menu_volteNoti" android:key="volte_noti_preference" android:summary="@string/summary_volteNoti" />
    <PreferenceScreen android:title="@string/callsettings_accessory_title" android:key="callsettings_accessory" android:summary="@string/callsettings_accessory_summary" android:fragment="com.android.phone.callsettings.AccessorySettings" />
    <PreferenceScreen android:title="@string/category_voiceCallEqSettings" android:key="callsettings_incallsound_eq" android:fragment="com.android.phone.callsettings.InCallSoundEQPreference" />
    <CheckBoxPreference android:title="@string/menu_extraVol" android:key="showing_extra_vol_preference" android:summary="@string/summary_extraVol" />
    <CheckBoxPreference android:title="@string/menu_extraRinger" android:key="extra_ringtone_preference" android:summary="@string/summary_extraRinger" />
    <CheckBoxPreference android:title="@string/menu_call_protection" android:key="voicecall_protection_preference" android:summaryOn="@string/summary_call_protection_on" android:summaryOff="@string/summary_call_protection_off" />
    <PreferenceScreen android:persistent="false" android:title="@string/labelCF" android:key="button_callType_select_key" android:fragment="com.android.phone.callsettings.CallTypeSelectForForwarding" />
    <PreferenceScreen android:persistent="false" android:title="@string/labelCF" android:key="button_cdma_voicecall_forwarding">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CdmaCallForwardOptions" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/labelCF" android:key="button_gsm_voicecall_forwarding">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsCallForwardOptions">
            <extra android:name="SS_Type" android:value="forwarding" />
        </intent>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/callsettings_number_region" android:key="numberregion_list_preference" android:summary="@string/callsettings_pnl_sub_text" android:fragment="com.android.phone.callsettings.PhoneNumberLocator" />
    <CheckBoxPreference android:title="@string/callsettings_autoredial_title" android:key="button_autoredial_key" android:summary="@string/callsettings_autoredial_summary" />
    <com.android.phone.callsettings.SwitchDialogPreference android:title="@string/callsettings_areacode_title" android:key="button_areacode_key" android:summary="@string/callsettings_areacode_summary_off" android:defaultValue="false" />
    <PreferenceScreen android:persistent="false" android:title="@string/additional_gsm_call_settings" android:key="button_more_expand_key" android:fragment="com.android.phone.GsmUmtsAdditionalCallOptions" />
    <PreferenceScreen android:persistent="false" android:title="@string/additional_gsm_call_settings" android:key="button_cdma_additional_more_expand_key">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CdmaAdditionalCallOptions" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/kt_additional_service" android:key="button_kt_additional_service" android:fragment="com.android.phone.KTAddedServiceActivity" />
    <PreferenceCategory android:persistent="false" android:title="@string/category_videoCallSettings" android:key="button_videocall_category_key" style="@style/PreferenceCategory">
        <PreferenceScreen android:enabled="true" android:title="@string/menu_videocallImage" android:key="preset_image" android:summary="@string/summary_videocallImage" android:fragment="com.android.phone.callsettings.PresetImage" />
        <CheckBoxPreference android:title="@string/menu_ownVideoInReceivedCall" android:key="showme_preference" android:summary="@string/summary_ownVideoInReceivedCall" />
        <CheckBoxPreference android:title="@string/menu_useCallFailOption" android:key="failoption_preference" android:summary="@string/summary_useCallFailOption" />
        <CheckBoxPreference android:title="@string/toggle_videocall_title" android:key="toggle_videocall" android:summary="@string/videocall_summary" />
        <CheckBoxPreference android:title="@string/toggle_videocall_mode_title" android:key="toggle_videocall_mode" android:summaryOn="@string/videocall_mode_on" android:summaryOff="@string/videocall_mode_off" />
        <PreferenceScreen android:enabled="true" android:title="@string/menu_captureImageViewer" android:key="capture_imageviwer_preference" android:summary="@string/summary_captureImageViewer" android:fragment="com.android.phone.callsettings.CaptureImageViewer" />
        <CheckBoxPreference android:title="@string/videocallmessage_title" android:key="videocall_message" android:summary="@string/videocallmessage_summary" />
        <CheckBoxPreference android:title="@string/toggle_videocall_speaker" android:key="toggle_videocall_speaker" android:summaryOn="@string/videocall_speaker_on" android:summaryOff="@string/videocall_speaker_off" />
        <CheckBoxPreference android:title="@string/toggle_videocall_indicator" android:key="toggle_videocall_indicator" android:summary="@string/videocall_indicator_summary" />
        <CheckBoxPreference android:title="@string/menu_emotionalEyeContact" android:key="emotionalEyeContact_preference" android:summary="@string/summary_emotionalEyeContact" />
        <PreferenceScreen android:title="@string/menu_useCallFailOption" android:key="failoption_list_preference" android:summary="@string/videocall_list_3_option_2" />
        <CheckBoxPreference android:title="@string/videocall_list_6" android:key="automaticaccept_preference" android:summaryOn="@string/automatic_accept_enabled" android:summaryOff="@string/automatic_accept_disabled" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/ip_call_settings" android:key="button_ipcallcdma_category_key">
        <PreferenceScreen android:title="@string/ip_call_list" android:key="call_ipcallcdma_preference" android:summary="@string/manage_ip_call_list" android:fragment="com.android.phone.callsettings.IpCallCdma" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/ip_call_settings" android:key="button_ipcall_category_key">
        <PreferenceScreen android:title="@string/ip_call_list" android:key="call_ipcall_preference" android:summary="@string/manage_ip_call_list" android:fragment="com.android.phone.callsettings.IpCall" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/voicemail" android:key="button_voicemail_category_key" style="@style/PreferenceCategory">
        <ListPreference android:persistent="true" android:title="@string/voicemail_provider" android:key="button_voicemail_provider_key" android:summary="@string/sum_voicemail_choose_provider" android:widgetLayout="@layout/round_more_icon" android:defaultValue="" />
        <PreferenceScreen android:persistent="false" android:title="@string/voicemail_settings" android:key="button_voicemail_setting_key" android:fragment="com.android.phone.VoicemailNumberFragment">
            <com.android.phone.EditPhoneNumberPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/voicemail_settings_number_label" android:key="button_voicemail_key" android:widgetLayout="@layout/round_more_icon" android:dialogTitle="@string/voicemail" phone:confirmMode="confirm" />
        </PreferenceScreen>
        <RingtonePreference android:persistent="true" android:title="@string/voicemail_notification_ringtone_title" android:key="button_voicemail_notification_ringtone_key" android:widgetLayout="@layout/round_more_icon" android:defaultValue="content://settings/system/notification_sound" android:ringtoneType="notification" />
        <PreferenceScreen android:persistent="false" android:title="@string/voicemail_provider" android:key="button_voicemail_provider_key_multi_sim">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" />
        </PreferenceScreen>
        <PreferenceScreen android:persistent="false" android:title="@string/voicemail_settings" android:key="button_voicemail_key_multi_sim">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" />
        </PreferenceScreen>
        <PreferenceScreen android:persistent="false" android:title="@string/voicemail_notification_ringtone_title" android:key="button_voicemail_notification_ringtone_key_multi_sim">
            <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" />
        </PreferenceScreen>
        <ListPreference android:persistent="true" android:entries="@array/voicemail_notification_vibrate_when_entries" android:title="@string/voicemail_notification_vibrate_when_title" android:key="button_voicemail_notification_vibrate_when_key" android:widgetLayout="@layout/round_more_icon" android:defaultValue="@string/voicemail_notification_vibrate_when_default" android:dialogTitle="@string/voicemail_notification_vibarte_when_dialog_title" android:entryValues="@array/voicemail_notification_vibrate_when_values" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/other_settings" android:key="button_misc_category_key" />
    <CheckBoxPreference android:title="@string/zz_country_code_dialing_title" android:key="toggle_country_name" android:summary="@string/zz_country_name_toggle_summary" android:defaultValue="true" android:disableDependentsState="true" />
    <EditTextPreference android:singleLine="true" android:maxLength="10" android:phoneNumber="true" android:title="@string/zz_country_code_name" android:key="country_code" android:summary="@string/zz_country_code_summary" android:dependency="toggle_country_name" android:dialogTitle="@string/zz_country_code_name" />
    <PreferenceScreen android:persistent="false" android:title="@string/assisted_dialing_reference_country_list" android:key="assisted_dialing_current_country_key">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.AssistedDialingCurrentCountyActivity" />
    </PreferenceScreen>
    <com.android.phone.callsettings.CallSettingsSwitchPreference android:title="@string/assisted_dialing" android:key="assisted_dialing_switch" android:summary="@string/assisted_dialing_summary">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.AssistedDialingActivity" />
    </com.android.phone.callsettings.CallSettingsSwitchPreference>
    <CheckBoxPreference android:persistent="false" android:title="@string/auto_retry_mode_title" android:key="button_auto_retry_key" android:summary="@string/auto_retry_mode_summary" />
    <ListPreference android:persistent="false" android:entries="@array/tty_mode_entries" android:title="@string/tty_mode_option_title" android:key="button_tty_mode_key" android:summary="@string/tty_mode_option_summary" android:entryValues="@array/tty_mode_values" />
    <CheckBoxPreference android:persistent="true" android:title="@string/hac_mode_title" android:key="button_hac_key" android:summary="@string/hac_mode_summary" />
    <ListPreference android:entries="@array/dtmf_tone_entries" android:title="@string/dtmf_tones_title" android:key="button_dtmf_settings" android:summary="@string/dtmf_tones_summary" android:entryValues="@array/dtmf_tone_values" />
    <CheckBoxPreference android:persistent="false" android:title="@string/ddtm_mode_option_title" android:key="button_ddtm_mode_key" android:summary="@string/ddtm_summary" />
    <PreferenceScreen android:persistent="false" android:title="@string/vvm_settings" android:key="button_vvm_setting_key" android:summary="@string/vvm_settings_summary">
        <intent android:action="com.coremobility.app.vnotes.action.LAUNCH_SETTINGS" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/labelGSMMore" android:key="button_gsm_more_expand_key" android:summary="@string/sum_gsm_call_settings">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsCallOptions" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/labelCDMAMore" android:key="button_cdma_more_expand_key" android:summary="@string/sum_cdma_call_settings">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CdmaCallOptions" />
    </PreferenceScreen>
</PreferenceScreen>