<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/additional_gsm_call_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <com.android.phone.CLIRListPreference android:persistent="false" android:enabled="false" android:entries="@array/clir_display_values" android:title="@string/labelCallerId" android:key="button_clir_key" android:summary="@string/loading" android:widgetLayout="@layout/round_more_icon" android:defaultValue="DEFAULT" android:dialogTitle="@string/labelCallerId" android:entryValues="@array/clir_values" />
    <PreferenceScreen android:title="@string/callsettings_call_barring" android:key="voicecall_barring_key" android:fragment="com.android.phone.callsettings.CallTypeSelectForBarring" />
    <PreferenceScreen android:persistent="false" android:title="@string/callsettings_call_barring" android:key="gsm_voicecall_barring_key" android:fragment="com.android.phone.callsettings.CallBarring" />
    <com.android.phone.CallWaitingCheckBoxPreference android:persistent="false" android:title="@string/labelCW" android:key="button_cw_key" android:summaryOn="@string/sum_cw_enabled" android:summaryOff="@string/sum_cw_disabled" />
    <CheckBoxPreference android:title="@string/callsettings_autoredial_title" android:key="button_autoredial_key" android:summary="@string/callsettings_autoredial_summary" />
    <CheckBoxPreference android:title="@string/callsettings_noise_reduction_title" android:key="button_noise_reduction_key" android:summary="@string/callsettings_noise_reduction_summary" />
    <PreferenceScreen android:persistent="false" android:title="@string/fdn" android:key="button_fdn_key" android:summary="@string/sum_fdn" android:fragment="com.android.phone.FdnSetting" />
    <com.android.phone.callsettings.SwitchDialogPreference android:title="@string/callsettings_areacode_title" android:key="button_areacode_key" android:summary="@string/callsettings_areacode_summary_off" android:defaultValue="false" />
    <CheckBoxPreference android:title="@string/callsettings_subaddress_title" android:key="button_subaddress_key" android:summary="@string/callsettings_subaddress_summary" />
</PreferenceScreen>